[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recompress_zarr"
version = "0.1.0"
description = ""
authors = [
    {name = "Yurii Zubov", email = "zubov452@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.4",
    "dask[distributed]>=2023.8.1",
    "zarr==2.18.7",
    "click>=8.1.6",
    "pydantic-zarr>=0.4.0",
    "numcodecs>=0.15.1",
    "dask-jobqueue==0.9.0",
    "natsort>=8.4.0",
    "bokeh>=3.4.0",
    "tensorstore>=0.1.64",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
